# trase

./: .appveyor.yml  .bettercodehub.yml  .clang-format  .clang-tidy  .codedocs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  codecov.yml
.github/workflows/: coverage.yml  llvm-asan.yml  macos-unit.yml  ubuntu-unit.yml  validate-and-deploy-files.yml  validate-files.yml  windows-unit.yml
docs/: Doxyfile  DoxygenLayout.xml  bibliography.bib  examples.md  user_concepts.md
examples/: AnimatedLine.cpp  AnimatedPoints.cpp  CMakeLists.txt  FacetPoints.cpp  Histogram.cpp  Line.cpp  LineStyle.cpp  Points.cpp  Rectangle.cpp
glad/: glad.c
imgui/: imgui_impl_glfw_gl3.cpp
src/: Axis.cpp  Axis.hpp  AxisDraw.hpp  BBox.h  BBox.hpp  Backend.cpp  Backend.hpp  BackendGL.cpp  BackendGL.hpp  BackendSVG.cpp  BackendSVG.hpp  Colors.cpp  Colors.hpp  Drawable.cpp  Drawable.hpp  DrawableDraw.hpp  Exception.h  Exception.hpp  Figure.cpp  Figure.hpp  FigureDraw.hpp  MyLibrary.cpp  MyLibrary.h  MyLibrary.hpp  Plot1D.cpp  Plot1D.hpp  Plot1DDraw.hpp  Vector.h  Vector.hpp  trase.hpp
src/backend/: Backend.cpp  Backend.hpp  BackendGL.cpp  BackendGL.hpp  BackendSVG.cpp  BackendSVG.hpp
src/frontend/: Axis.cpp  Axis.hpp  Axis.tcc  AxisDraw.hpp  Data.cpp  Data.hpp  Data.tcc  Drawable.cpp  Drawable.hpp  DrawableDerived.hpp  DrawableDraw.hpp  Facets.hpp  Facets.tcc  Figure.cpp  Figure.hpp  Figure.tcc  FigureDraw.hpp  Geometry.cpp  Geometry.hpp  Geometry.tcc  GeometryDraw.hpp  Histogram.cpp  Histogram.hpp  Histogram.tcc  HistogramDraw.hpp  Legend.cpp  Legend.hpp  Legend.tcc  Line.hpp  Line.tcc  LineDraw.hpp  Plot1D.cpp  Plot1D.hpp  Plot1D.tcc  Plot1DDraw.hpp  Points.hpp  Points.tcc  PointsDraw.hpp  Rectangle.hpp  Rectangle.tcc  (+4 more)
src/util/: BBox.hpp  CSVDownloader.cpp  CSVDownloader.hpp  Colors.cpp  Colors.hpp  ColumnIterator.hpp  Exception.hpp  Style.cpp  Style.hpp  Vector.hpp
tests/: CMakeLists.txt  DummyDraw.cpp  DummyDraw.hpp  MyTest.cpp  MyTests.cpp  TestAxis.cpp  TestBBox.cpp  TestBackendSVG.cpp  TestCSVDownloader.cpp  TestColors.cpp  TestData.cpp  TestFigure.cpp  TestFontManager.cpp  TestGeometry.cpp  TestHistogram.cpp  TestInteractive.cpp  TestLegend.cpp  TestLine.cpp  TestLines.cpp  TestPlot1D.cpp  TestPoints.cpp  TestRectangle.cpp  TestStyle.cpp  TestTransform.cpp  TestTransformMatrix.cpp  TestUserConcepts.cpp  TestVector.cpp  TestYlabel.cpp
